# vsa-optim-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  LOSS_TRACKING_FEATURE.md  LOSS_TRACKING_GUIDE.md  LOSS_TRACKING_SUMMARY.md  README.md  REUSE-DEBT.md  REUSE.toml
.github/workflows/: ci.yml
benches/: optim_bench.rs
examples/: loss_tracking_demo.rs
scripts/: check.sh
src/: config.rs  error.rs  lib.rs  python.rs
src/phase/: deterministic_trainer.rs  loss_history.rs  mod.rs  trainer.rs
src/prediction/: deterministic.rs  mod.rs  predictor.rs
src/ternary/: accumulator.rs  mod.rs
src/vsa/: compressor.rs  mod.rs
tests/: integration_tests.rs  loss_history_integration.rs
